# artel

./: .gitignore  AI_ONBOARD_PROMPT.md  README.md  SESSION_SUMMARY.md
contracts/: Cargo.toml
contracts/arisan-contract/: Cargo.toml
contracts/arisan-contract/src/: lib.rs
contracts/arisan-contract/test_snapshots/test/: test_all_in_join.1.json  test_collateral_formula.1.json  test_collateral_yield_no_phantom.1.json  test_fair_rosca_full.1.json  test_full_lifecycle.1.json  test_init_join_exit.1.json  test_slash.1.json  test_two_rounds_no_deadlock.1.json
contracts/artel-factory/: Cargo.toml
contracts/artel-factory/src/: lib.rs
contracts/artel-factory/test_snapshots/test/: test_factory_flow.1.json
contracts/artel-faucet/: Cargo.toml
contracts/artel-faucet/src/: lib.rs
contracts/artel-faucet/test_snapshots/test/: test_claim.1.json  test_init.1.json
contracts/yield-vault/: Cargo.toml
contracts/yield-vault/src/: lib.rs
contracts/yield-vault/test_snapshots/test/: test_init_and_state.1.json
demo-video/: CHEATSHEET.md  FLOW.md  README.md  SCRIPT.md  SHOTLIST.md
frontend/: .env.example  .gitignore  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json
handover/: AI-ONBOARD.md  ARCHITECTURE.md  CHECKPOINTS.md  CODEBASE-GUIDE.md  DEPLOYMENT.md  FRONTEND.md  GIT-RULES.md  PROJECT.md  README.md  ROADMAP.md  SESSION-LOG.md  SMART-CONTRACTS.md  TECH-STACK.md  WHAT-WE-DID.md
suivan/: .gitignore  vercel.json
update-faiz/: ADAPTASI_SUI_KE_STELLAR.md  AI_ONBOARD_PROMPT.md  CHANGELOG.md  DEPLOY_HANDOVER.md  HANDOVER.md  (+4 more)
(+225 files in other folders)
