[workspace]
resolver = "2"
members = ["arisan-contract", "yield-vault", "artel-factory", "artel-faucet"]

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
target = "wasm32v1-none"
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
